--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,13 @@
 			href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
 			rel="stylesheet"
 		/>
-		<title>ITS</title>
+		<title>
+			쉽고 간편하게 스터디와 프로젝트 팀을 구할 수 있는 온라인 스터디 매칭
+			플랫폼 It's
+		</title>
 	</head>
 	<body>
 		<div id="root"></div>
+		<div id="root-modal"></div>
 	</body>
 </html>
