--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="ko">
-	<head>
-		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Vite App</title>
-	</head>
-	<body>
-		<div id="root"></div>
-		<div id="root-modal"></div>
-		<script type="module" src="/src/main.jsx"></script>
-	</body>
+
+<head>
+	<meta charset="UTF-8" />
+	<link rel="icon" type="image/png" sizes="16x16" href="/svg/favicon.png">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="theme-color" content="#ffffff">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>쉽고 간편하게 스터디와 프로젝트 팀을 구할 수 있는 온라인 스터디 매칭 플랫폼 It's</title>
+</head>
+
+<body>
+	<div id="root"></div>
+	<div id="root-modal"></div>
+	<script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
